@@ -5931,7 +5931,7 @@ mips_elf_calculate_relocation (abfd,
 	   addresses.  */
 	symbol = 0;
       else if (info->shared && !info->symbolic && !info->no_undefined
-	       && ELF_ST_VISIBILITY (h->other) == STV_DEFAULT)
+	       && ELF_ST_VISIBILITY (h->root.other) == STV_DEFAULT)
 	symbol = 0;
       else if (strcmp (h->root.root.root.string, "_DYNAMIC_LINK") == 0)
 	{
@@ -5950,7 +5950,7 @@ mips_elf_calculate_relocation (abfd,
 		 (info, h->root.root.root.string, input_bfd,
 		  input_section, relocation->r_offset,
 		  (!info->shared || info->no_undefined
-		   || ELF_ST_VISIBILITY (h->other)))))
+		   || ELF_ST_VISIBILITY (h->root.other)))))
 	    return bfd_reloc_undefined;
 	  symbol = 0;
 	}
